*Empty MediaWiki Message*

--- a/Pien_Keulstra.mw
+++ b/Pien_Keulstra.mw
@@ -33,13 +33,13 @@ Bie de [[Neerlaandse Kampioenskopn skaatsen ofstaandn 2012|NK Ofstaandn 2012]] i
 ! [[Neerlaandse kampioenskopn skaatsen jeugd|NK <br /> jeugd]]
 ! [[Wearldkampioenskopn skaatsen jeugd|WK <br /> Jeugd]]
 |-
-| [[:Kattegorie:Langebaanskaatsen in 2009|2009]] ||  ||  || 2e (C-jr) || 
+| [[:Kategorie:Langebaanskaatsen in 2009|2009]] ||  ||  || 2e (C-jr) || 
 |-
-| [[:Kattegorie:Langebaanskaatsen in 2010|2010]] ||  ||  || 2e (B-jr) || 
+| [[:Kategorie:Langebaanskaatsen in 2010|2010]] ||  ||  || 2e (B-jr) || 
 |-
-| [[:Kattegorie:Langebaanskaatsen in 2011|2011]] || 14e 1500m<br />10e 3000m || NC13 || 2e (A-jr) ||  zilver 
+| [[:Kategorie:Langebaanskaatsen in 2011|2011]] || 14e 1500m<br />10e 3000m || NC13 || 2e (A-jr) ||  zilver 
 |-
-| [[:Kattegorie:Langebaanskaatsen in 2012|2012]] || 10e 1500m<br />{{gold}} 3000m<br />  goald 5000m || || ||
+| [[:Kategorie:Langebaanskaatsen in 2012|2012]] || 10e 1500m<br />{{gold}} 3000m<br />  goald 5000m || || ||
 |}
 
 {{Bron|Welle=
