*Empty MediaWiki Message*

--- a/Heeze-Leende.mw
+++ b/Heeze-Leende.mw
@@ -1,11 +1,11 @@
 {{Gemeante
-| bestaandsnaam vlagge = Heeze Leende vlag.svg
-| bestaandsnaam woapn = Coat of arms of Heeze-Leende.svg
+| bestaandsnaam vlagge = Heeze-Leende_vlag.svg 
+| bestaandsnaam woapn = Heeze-Leende_wapen.svg
 | naam = Heeze-Leende
-| lokatie = LocatieHeezeLeende
+| lokatie = NL_-_locator_map_municipality_code_GM1658_%282016%29.png
 | proveensie = [[Noord-Braobant|Noordbråbant]]
 | heufdplaats = 
-| öppervlakte = 	105,04
+| öppervlakte = 105,04
 | öppervlakte laand = 104,02 
 | öppervlakte water = 1,02 
 | inwonners = 16.217
