*Empty MediaWiki Message*

--- a/Landerd.mw
+++ b/Landerd.mw
@@ -1,6 +1,6 @@
 {{Gemeante
-| bestaandsnaam vlagge = Landerd_vlag.svg
-| bestaandsnaam woapn = Coat_of_arms_of_Landerd.svg
+| bestaandsnaam vlagge = Flag_of_Landerd.svg
+| bestaandsnaam woapn = Landerd_wapen.svg
 | naam = Landerd
 | lokatie = LocatieLanderd
 | proveensie = [[Noord-Braobant|Noordbråbant]]
