*Empty MediaWiki Message*

--- a/Laarbeek_(gemeynde).mw
+++ b/Laarbeek_(gemeynde).mw
@@ -1,6 +1,6 @@
 {{Gemeante
-| bestaandsnaam vlagge =Laarbeek_vlag.svg
-| bestaandsnaam woapn = Coat_of_arms_of_Laarbeek.svg
+| bestaandsnaam vlagge = Flag_of_Laarbeek.svg 
+| bestaandsnaam woapn = Laarbeek_wapen.svg
 | naam = Laarbeek (Lårbeake)
 | lokatie = LocatieLaarbeek 
 | proveensie = [[Noord-Braobant|Noordbråbant]]
