--- a/Loon_op_Zand.mw
+++ b/Loon_op_Zand.mw
@@ -2,7 +2,7 @@
 | bestaandsnaam vlagge = Flag_of_Loon_op_Zand.svg 
 | bestaandsnaam woapn = Loon_op_Zand-wapen.svg
 | naam = Loon op Zand
-| lokatie = LocatieLoonopZand
+| lokatie = NL_-_locator_map_municipality_code_GM0809_%282016%29.png
 | proveensie = [[Noord-Braobant|Noordbråbant]]
 | heufdplaats = Kaatsheuvel
 | öppervlakte = 50,71 
