--- a/Heeze-Leende.mw
+++ b/Heeze-Leende.mw
@@ -1,8 +1,8 @@
 {{Gemeante
-| bestaandsnaam vlagge = Heeze-Leende_vlag.svg 
-| bestaandsnaam woapn = Heeze-Leende_wapen.svg
+| bestaandsnaam vlagge = Heeze-Leende vlag.svg 
+| bestaandsnaam woapn = Heeze-Leende wapen.svg
 | naam = Heeze-Leende
-| lokatie = NL_-_locator_map_municipality_code_GM1658_%282016%29.png
+| lokatie = NL - locator map municipality code GM1658 (2016)
 | proveensie = [[Noord-Braobant|Noordbråbant]]
 | heufdplaats = 
 | öppervlakte = 105,04
