Verwysing nå döärverwyssyde repareerd ([[Den Bosch]] nå [['s-Hertogenbosch (stad)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Heusden.mw
+++ b/Heusden.mw
@@ -27,7 +27,7 @@ Andere dörpe en kernen in de gemeynde sint Heusden en de steades Drunen en Vlij
 * [[Gisbertus Voetius]], van oarsprung Gijsbert Voet (Heusden, 3 maart 1589 - Utrecht, 1 november 1676), godgeleyrden, hougleyraar en preydiker
 * [[Jacob van Eyck]] (Heusden, ca. 1590 - Utrecht, 26 maart 1657), musikant en musikskryver.
 * [[Harm Bouman]] (Heusden, 1 november 1917 - Breda, 24 december 2001), oaverlöyper
-* [[Hendrik van der Geld]] (Elsholt, 9 november 1838 - [[Den Bosch]], 8 november 1914), bealdhauer
+* [[Hendrik van der Geld]] (Elsholt, 9 november 1838 - [['s-Hertogenbosch (stad)|Den Bosch]], 8 november 1914), bealdhauer
 * [[Piet Libregts]] (Vlijmen, 16 februari 1930 – Heeswijk-Dinther, 25 augustus 2013), neaderlandsk ploogleider.
 * [[Martin van Rooijen]] (Drunen, 31 juli 1942), vöärmålig politiker.
 * [[Lars Boom (wielrenner)|Lars Boom]] (Vlijmen, 30 december 1985), profweelrenner
