--- a/Heusden.mw
+++ b/Heusden.mw
@@ -1,6 +1,6 @@
 {{Gemeante
-| bestaandsnaam vlagge = Flag_of_Heusden.svg
-| bestaandsnaam woapn = Coat_of_arms_of_Heusden.svg
+| bestaandsnaam vlagge = Flag of Heusden.svg
+| bestaandsnaam woapn = Coat of arms of Heusden.svg
 | naam = Heusden
 | lokatie = LocatieHeusden
 | proveensie = [[Noord-Braobant|Noordbråbant]]
@@ -19,7 +19,7 @@
 | webstie = [http://www.heusden.nl/ www.heusden.nl]
 }}
 
-'''Heusden''' (spreak uut: ''höösden'') is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is et vestingstädken [[Heusden]]. Der woanet 44.897 lüde up ne uppervlakde van 81,22 km². 
+'''Heusden''' (spreak uut: ''höösden'') is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is et vestingstädken [[Heusden (stad)|Heusden]]. Der woanet 44.897 lüde up ne uppervlakde van 81,22 km². 
 
 Andere dörpe en kernen in de gemeynde sint Heusden en de steades Drunen en Vlijmen. Van disse steades is Drunen et grötste. Andere steades in de gemeynde sint de dörpe Doeveren (Duveren), Elshout (Elsholt), Giersbergen (Geersbargen), Haarsteeg (Hårsteage), Hedikhuizen (Headikhüsen), Heesbeen (Heysbeyn), Herpt (Harpt), Nieuwkuijk (Nyküük) en Oudheusden (Oldhöösden).
 
