--- a/Landerd.mw
+++ b/Landerd.mw
@@ -1,6 +1,6 @@
 {{Gemeante
-| bestaandsnaam vlagge = Flag_of_Landerd.svg
-| bestaandsnaam woapn = Landerd_wapen.svg
+| bestaandsnaam vlagge = Flag of Landerd.svg
+| bestaandsnaam woapn = Landerd wapen.svg
 | naam = Landerd
 | lokatie = LocatieLanderd
 | proveensie = [[Noord-Braobant|Noordbråbant]]
@@ -11,8 +11,8 @@
 | inwonners = 15.761
 | doatum inwonners = 1. augustus 2020
 | dichtheid = 224 
-| breedtegroad = 51/43/N
-| lengtegroad = 5/39/E
+| breedtegroad = 51/43//N
+| lengtegroad = 5/39//E
 | verkeersoader = [[A50]], [[N277]], [[N324]]
 | netnummer = 0486
 | postkode = 5374, 5375, 5410, 5411	
@@ -22,8 +22,6 @@
 '''Landerd''' is ne gemeynde in de [[Nederlaand|neaderlandske]] [[provincy]] [[Noord-Braobaant|Noordbråbant]]. De höyvdsteade van de gemeynde is [[Schaijk]]. Der woanet 15.761 lüde up ne uppervlakde van 70,71 km². 
 Andere dörpe en kernen in de gemeynde sint Zeeland (6.740), (Schaijk) 7.255, Reek (1.740), en de nåberskoppen Brand, Duifhuis, Graspeel, Hoefkens, Hooge Heide, Kreitsberg, 't Mun, Nabbegat, Slabroek, Trent, Voederheil, Witte Dellen en Zevenhuis.
 
-== Bekende lüde uut de gemeynde ==
-*
 == Uutgånde verwysing ==
 * [https://www.naamgemeynde.nl/ Officiele gemeyndewebsteade]
 {{Noord-Braobant}}
