--- a/Loon_op_Zand.mw
+++ b/Loon_op_Zand.mw
@@ -1,8 +1,8 @@
 {{Gemeante
-| bestaandsnaam vlagge = Flag_of_Loon_op_Zand.svg 
-| bestaandsnaam woapn = Loon_op_Zand-wapen.svg
+| bestaandsnaam vlagge = Flag of Loon op Zand.svg 
+| bestaandsnaam woapn = Loon op Zand-wapen.svg
 | naam = Loon op Zand
-| lokatie = NL_-_locator_map_municipality_code_GM0809_%282016%29.png
+| lokatie = NL - locator map municipality code GM0809 (2016)
 | proveensie = [[Noord-Braobant|Noordbråbant]]
 | heufdplaats = Kaatsheuvel
 | öppervlakte = 50,71 
