--- a/Stockholm.mw
+++ b/Stockholm.mw
@@ -1,5 +1,6 @@
+Stockholm is swedens hööfstad un dat lands politisk un ekonomiske centrum. Dat stadt is vun de ende vun melaren. Stockholm war 1187 grundet. De ostlige deil hett 30 000 Ailannen. Stockholm is en bannig groot so man delen stockholm in twee deilen, stockholm binnen un buten de tollen. Jåhr 1998 war de stadt europas kulturturhöövstadt un 2010 de umweldhöövstadt.
+
 [[Bestaand:Stockholm old town 2002.jpg|thumb|Riddarholm met daorachter de olde stad]]
-'''Stockholm''' ([[Nedersaksies]]e oetspraok: {{IPA|[ˈstɔkˌhɔlm]}}, [[Zweeds]]e oetspraok: {{IPA|[ˈstɔkːˈhɔlm]}}) is de [[heufdstad]] en grootste stad van [[Sveden|Zweden]] en t dichtstbevolkte gebeed van [[Skandinavië]]. In de stad bevindt zich de Zweedse regering, de Riksdag (parlement), de residensie van den Zweedsen [[könning (titel)|könning]] en den [[minister-president]] . In 2010 wonden zon 22% van de Zweedse bevolking in t staedelik gebeed rond de stad. Stockholm is de dichtsbevolkte stad van Zweden, met 847.073 inwonners in de stad zelf (2010), 1,25 miljoen in t verstaedelikte gebeed rond de stad (2005) en meer as 2 miljoen in de 6,519 km<sup>2</sup> van de regio (2010).
 
 {{Coordinate|NS=59/19/30/N|EW=18/03/0/E|type=city|pop=847073|region=SE}}
 {{Begin|act}}
