--- a/24_april.mw
+++ b/24_april.mw
@@ -15,6 +15,7 @@ De volgende gebeurtenissen vunnen of vienen plaose op '''24 april'''
 *[[1819]] - [[Klaus Groth]], dichter in t Nedersassisch
 *[[1955]] - [[John de Mol jr.|John de Mol]], Nederlaanse mediapersoon
 *[[1957]] - [[Inge Ipenburg]], Nederlaanse actrice
+*1989 - Thomas F. sanders, Amerikaanse zanger
 
 ==Uut de tied==
 *...
