--- a/Stockholm.mw
+++ b/Stockholm.mw
@@ -1,5 +1,5 @@
-Stockholm is swedens hööfstad un dat lands politisk un ekonomiske centrum. Dat stadt is vun de ende vun melaren. Stockholm war 1187 grundet. De ostlige deil hett 30 000 Ailannen. Stockholm is en bannig groot so man delen stockholm in twee deilen, stockholm binnen un buten de tollen. Jåhr 1998 war de stadt europas kulturturhöövstadt un 2010 de umweldhöövstadt.
 [[Bestaand:Stockholm old town 2002.jpg|thumb|Riddarholm met daorachter de olde stad]]
+'''Stockholm''' ([[Nedersaksies]]e oetspraok: {{IPA|[ˈstɔkˌhɔlm]}}, [[Zweeds]]e oetspraok: {{IPA|[ˈstɔkːˈhɔlm]}}) is de [[heufdstad]] en grootste stad van [[Sveden|Zweden]] en t dichtstbevolkte gebeed van [[Skandinavië]]. In de stad bevindt zich de Zweedse regering, de Riksdag (parlement), de residensie van den Zweedsen [[könning (titel)|könning]] en den [[minister-president]] . In 2010 wonden zon 22% van de Zweedse bevolking in t staedelik gebeed rond de stad. Stockholm is de dichtsbevolkte stad van Zweden, met 847.073 inwonners in de stad zelf (2010), 1,25 miljoen in t verstaedelikte gebeed rond de stad (2005) en meer as 2 miljoen in de 6,519 km<sup>2</sup> van de regio (2010).
 
 {{Coordinate|NS=59/19/30/N|EW=18/03/0/E|type=city|pop=847073|region=SE}}
 {{Begin|act}}
@@ -7,21 +7,3 @@ Stockholm is swedens hööfstad un dat lands politisk un ekonomiske centrum. Dat
 [[Kategorie:Achterhooks artikel]]
 [[Kategorie:Sveden]]
 [[Kategorie:Stad]]
-==Stockholm op anner språk==
-Bereits wenn stockholm war måkt bewegt sik veele minsch vun anner sied vun de bottenviek. Dat finnisk name wurde Tukholma. Vundag is finnisk en minderheitspråk in sweden un gehört (förvaltningsområdet för finska) de mehrere dütske immigranten behalten de name stockholm. De nam hett oft anner bokstavieren in verschiedene språk. Stockholmi meänkeli, stockholmba samisk op südsamisk heet dat stuekie. Dat veelest afweichend form vun stockholm is de afkört latinsk name Holmia. op fier vun europas anner hööfspråk, russk, polsk, spansk un italiensk, Стокгольм ''(Stokgol'm) sztokholm estocholmo stoccolma, man de nam staadt bokstaviert op mehrere anner språk. In länner buten sweden gifft dat setzt wo ook heet stockholm. To dat bispööl in biten ståten mit migranten vun sweden.
-==Spitzname un slogan== 
-Över de jåhr hett veele name un konzept över stockholm verwendet to kregen touristen vun anner länner to dat bispööl (Nordens Venedig=nordisk venedig) (Melardrottningen=melarkönigin). Stockholms letze offiziell name is (Stockholm the capital of scandinavia=Stockholm de hööfstadt vun skandinavien) führte 2005. (Nordens Venedig=nordisk venedig) is de mest verwende name vun utlänniske touristen, dårför de gliekheit mit dat stadt venedig struktureert vun Eilanden vun de see.   
-Vun dat ende 1800-tahl un nach vörne verwenden Eken as spitzname in stockholm.  
-==Historie== 
-De oorsprung vun Stockholm as siedlung un laater as en stadt hängt dormit tosammen mit de Isoleeren ut Melaren vun de ostsee, wat schon passert is vun de istid, dann de smült inlandis entlaste de drück gegen de erdskorp. Landhebung in stockholm is en deil vun de landhebung in skandinavien. 
-
-De oldesten dokument mit en seker datum dår de name stockholm gifft is twee. En is vun 1252 vun kung valdemar un birgel jarl. Un de anner is en schulbreef vun 19 augusti/aarnmånd 1252 vun birgel jarl. 
-
-Stockholm war fröh en wichtig Handelstadt för de isenhandel vun Bargwarken in bergslagen dår de Swårtransporte gehe mit boot mit melaren to de waterkant. 
-
-Stockholm as en handelzentrum för alle art vun güte entwickelt stark dör de veele dütsker köplüud wo siene egen handelzentrum in norddütskland hebben. Fast in 1300-tahl gifft en verbreitet Bebauung op de etzen. in mitt op de 1400-tahl hebb de befölkerun to 5 000-6 000 wasst. de slacht in brunkeberg de 10 oktober/sådmånd 1471 un stockholms bloodbad de 8 november/neavelmånd 1520 is twee Begeefnis wo en groot Inwirken op stockholm hett.
-
-Dat stadt wird bannig grooter später gustav vasas Inthronisierung un ungefähr jåhr 1600 war de tåhl inwohner  cirka 10 000. dat war 1600-tahl sweden in grootmakt war. Un dat bemerkten ook in stockholms entwicklung. Twichen dat jåhr 1610 un 1680 wird dat belfölkerung söss mål mehr.  
-==U-bahn==
-Stockholms u-bahn is en 110 kilometer lang u-bahnsystem wo stockholm mit vörort bedient. dat u-bahn is in Besitz vun Region stockholm. Antahl Bahnhofs in verwendung is 100, opdeilen in de dree deilsystem. gröön, rööd un blau linie. De erste tunnel, under södermalm, wurde vun stråtbahnen in Vorstand nahmen 30 september/harvstmånd 1933 un Enweihung för swerere u-bahntog 1 oktober/sådmånd 1950. 
-Stockholm u-bahn is 28 langste in de welt.
