*Empty MediaWiki Message*

--- a/Mill_en_Sint_Hubert.mw
+++ b/Mill_en_Sint_Hubert.mw
@@ -2,7 +2,7 @@
 | bestaandsnaam vlagge = Mill_en_Sint_Hubert_vlag.svg 
 | bestaandsnaam woapn = Mill en Sint Hubert wapen.svg
 | naam = Mill en Sünte Hubert
-| lokatie = LocatieMillenSintHubert
+| lokatie = NL_-_locator_map_municipality_code_GM0815_%282016%29.png
 | proveensie = [[Noord-Braobant|Noordbråbant]]
 | heufdplaats = Mill
 | öppervlakte = 53,17 
