*Empty MediaWiki Message*

--- a/Nuenen,_Gerwen_en_Nederwetten.mw
+++ b/Nuenen,_Gerwen_en_Nederwetten.mw
@@ -1,5 +1,5 @@
 {{Gemeante
-| bestaandsnaam vlagge = Flag_of_Nuenen.svg 
+| bestaandsnaam vlagge = Flag_of_Nuenen.svg
 | bestaandsnaam woapn = Nuenen_Gerwen_en_Nederwetten_wapen.svg
 | naam = Nuenen, Gerwen en Nederwetten
 | lokatie = NL_-_locator_map_municipality_code_GM0820_%282016%29.png
@@ -23,7 +23,7 @@
 Andere dörpe en kernen in de gemeynde sint de karkdörpe [[Gerwen]] en [[Nederwetten]] en noch en handvul nåberskappen, sou as Opwetten, Boord, Eeneind, Stad van Gerwen en Olen.
 
 == Uutgånde verwysing ==
-* [https://www.naamgemeynde.nl/ Officiele gemeyndewebsteade]
+* [https://www.nuenen.nl/ Officiele gemeyndewebsteade]
 {{Noord-Braobant}}
 [[Kategorie:Tweants artikel]]
 [[Kategorie: Gemeente in Noord-Braobant]]
