--- a/Une.mw
+++ b/Une.mw
@@ -9,7 +9,7 @@ De Uner bevolking was besunder groots met de koms van dit gebou.
 
 ==Uutgaonde verwiezingen==
 *[http://www.oene-info.nl/ Webstee mit infermatie aover Une]
-*[https://www.oenerbelang.nl/ webstee van de vereniging Oener Belang]
+*[https://www.oenerbelang.nl/ Webstee van de vereniging Oener Belang]
 *[https://www.museumoene.nl Webstee van hét museum van Oene]
 
 {{Epe}}
