--- a/Scheuvellopen.mw
+++ b/Scheuvellopen.mw
@@ -1,4 +1,5 @@
 [[Ofbeelding:Martina Sablikova 2007.jpg|right|thumb|250px|Wedstriedscheuveln: [[Martina Sáblíková]] op een kuunstiesbane]]
+[[Ofbeelding:IMG-20210213-WA0003.jpg|thumb|Scheuveln op [[de Dobbe]] in de [[Aa-laanden]] in [[Zwolle]]]]
 '''Scheuvellopen''' of '''scheuveln''' is oe voortbewegen aover een [[ies|iesoppervlakte]] op dunne, rechte iezers ([[scheuvel|scheuvels]]). Scheuvellopen kuj doen um verscheiden redenen, zoas dieverdaotsie, sport, lichemsbeweging of reizen. 't Wördt zowal op netuuries as op kuunsties edaone. Zo rap as 't ies betrouwber is en de weersumstaandigheden 't toelaot, wördt der deur iesclubs toertochten organiseerd. As wedstriedsport kent 't scheuvellopen meerdere disciplines.
 
 ==Geschiedenis==
@@ -35,6 +36,8 @@ In Nederlaand deuden alle bevolkingsklassen an scheuvellopen, zoas blek uut schi
 ** ''scheuvel(e)n'' (uutspraok mangs ''sk-'')
 ** ''skasenrieden'', ''-riejen'', ''-ri'jen'' ([[Zwols]])
 ** ''skeuvelen'', ''skoevelen'' ([[Zwols]])
+**''schaatsenlopen''
+**''scheuvellopen''
 * [[Stellingwarfs]] (schrif ''sch-'', mar uutspraok ''sk-''):
 ** ''schaa(t)sen''
 ** ''schaa(t)s(e)rieden''
