--- a/Mill_en_Sint_Hubert.mw
+++ b/Mill_en_Sint_Hubert.mw
@@ -1,8 +1,8 @@
 {{Gemeante
-| bestaandsnaam vlagge = Mill_en_Sint_Hubert_vlag.svg 
+| bestaandsnaam vlagge = Mill en Sint Hubert vlag.svg 
 | bestaandsnaam woapn = Mill en Sint Hubert wapen.svg
 | naam = Mill en Sünte Hubert
-| lokatie = NL_-_locator_map_municipality_code_GM0815_%282016%29.png
+| lokatie = NL - locator map municipality code GM0815 (2016)
 | proveensie = [[Noord-Braobant|Noordbråbant]]
 | heufdplaats = Mill
 | öppervlakte = 53,17 
