/* Kunnigheid */informatie toegevoegd

--- a/Assen.mw
+++ b/Assen.mw
@@ -31,6 +31,7 @@ De taol die as ze in Assen praot, rekent ze töt 't [[Midden-Drèents]].
 *[[Inge Dekker]], zwemster
 *[[Lia Dekker]], zwemster
 *[[Harry Muskee]], zanger van [[Cuby and the Blizzards]]
+*[[Enzo Knol]], youtuber
 
 == Nedersaksisch ==
 * [[Grunnegs]]: ''Azzen''
