*Empty MediaWiki Message*

--- a/Warrior_Cats.mw
+++ b/Warrior_Cats.mw
@@ -2,7 +2,7 @@
 
 De sery is in en bülte van verskillende talen vertålt, maar neet in et [[Neadersassisk|nedersassisk]]. In [[2016]] hef [[Alibaba Pictures]] de rechten ekocht vöär et maken van en film van de serys.
 
-Er bint söven serys dee elk zes boken hebt of gåt hebben. Er bint därtyn Süper Editys, en dår kümp er nog eyne by. Dårnåst bint er ouk nog söven Field Guides, därtyn [[Manga|Mangas,]] eyn Graphic Novel, 22 Warriors Novellas en neygen körte verhålen. Et eyrste book, ''Into the Wild'', kwamp in [[2003]] üüt. 
+Er bint söven serys dee elk zes boken hebt of gåt hebben. Er bint därtyn Super Editys, en dår kümp er nog eyne by. Dårnåst bint er ouk nog söven Field Guides, därtyn [[Manga|Mangas,]] eyn Graphic Novel, 22 Warriors Novellas en neygen körte verhålen. Et eyrste book, ''Into the Wild'', kwamp in [[2003]] üüt. 
 
 == Oaverzicht üüt ekommen boken ==
 Hyronder kün y de üüt egeaven boken zeen en wanneer as ze vertålt bint nå et [[Nederlaands|nederlaandsk]] met dårnåst de vertåling nå et [[Neadersassisk|nedersassisk]].
@@ -37,14 +37,14 @@ Hyronder kün y de üüt egeaven boken zeen en wanneer as ze vertålt bint nå e
 |-
 | ''Twilight'' (22 augustus 2006) ||''Schemering'' (17 july 2014) (''Skemering'')
 |-
-| ''Sunset'' (26 september 2006) ||''Zonsondergang'' (20 januari 2015) (''Zünsündergang'')
+| ''Sunset'' (26 september 2006) ||''Zonsondergang'' (20 januari 2015) (S''ünsundergang'')
 |}
 
 === Sery 3 'Power of Three / De Macht van Dree' ===
 {| class="wikitable"
 ! Originele titel (dåtum van üütgåve) !! Nederlaandske titel (dåtum van üütgåve)
 |-
-| ''The Sight'' (24 april 2007) ||''Het Tweede Gezicht'' (20 juni 2015) (''De tweyde Kop'')
+| ''The Sight'' (24 april 2007) ||''Het Tweede Gezicht'' (20 juni 2015)
 |-
 | ''Dark River'' (26 desember 2007)||''Duistere Rivier'' (7 desember 2015) (''Düüstere Rivyr'')
 |-
@@ -54,7 +54,7 @@ Hyronder kün y de üüt egeaven boken zeen en wanneer as ze vertålt bint nå e
 |-
 | ''Long Shadows'' (25 november 2008) ||''Lange schaduwen'' (20 februari 2017) (''Lange Skaduwe''n)
 |-
-| ''Sunrise'' (21 april 2009) ||''Zonsopgang'' (5 july 2017) (''Zünsüpgang'')
+| ''Sunrise'' (21 april 2009) ||''Zonsopgang'' (5 july 2017) (S''ünsupgang'')
 |}
 
 === Sery 4 'Omen of the Stars / Teken van de Sterren' ===
@@ -71,18 +71,18 @@ Hyronder kün y de üüt egeaven boken zeen en wanneer as ze vertålt bint nå e
 |-
 | ''The Forgotten Warrior'' (22 november 2011) ||''De Vermiste Krijger'' (2 april 2019) (''De Vermiste Kryger'')
 |-
-| ''The Last Hope'' (3 april 2012) ||''De Laatste Hoop'' (25 september 2019) (''De Läste Håp'')
+| ''The Last Hope'' (3 april 2012) ||''De Laatste Hoop'' (25 september 2019) (''De Lätste Håp'')
 |}
 
 === Sery 5 'Dawn of the Clans / Het Ontstån van de Clans' ===
 {| class="wikitable"
 ! Originele titel (dåtum van üütgåve) !! Nederlaandske titel (dåtum van üütgåve)
 |-
-| ''The Sun Trail'' (5 meert 2013)||''Het Zonnepad'' (3 desember 2019) (''Et Zünnepad'')
+| ''The Sun Trail'' (5 meert 2013)||''Het Zonnepad'' (3 desember 2019) (''Et Sünnepad'')
 |-
 | ''Thunder Rising'' (5 november 2013) ||''Donderwolken'' (19 mei 2020)
 |-
-| ''The First Battle'' (8 april 2014) ||''Het Eerste Gevecht'' (15 july 2020) (''Et eyrste Gevecht'')
+| ''The First Battle'' (8 april 2014) ||''Het Eerste Gevecht'' (15 july 2020) (''Et Eyrste Gevecht'')
 |-
 | ''The Blazing Star'' (4 november 2014) || De Felle Ster (19 november 2020)
 |-
@@ -133,7 +133,7 @@ Hyronder kün y de üüt egeaven boken zeen en wanneer as ze vertålt bint nå e
 |-
 | ''Bluestar's Prophecy'' (28 juliy2009) ||''Blauwsters Voorspelling''  (16 oktober 2017) (''Blauwsters Vöärspelling'')
 |-
-| ''SkyClan's Destiny'' (3 augustus 2010) || ''Terugkeer van de Hemelclan'' (12 oktober 2018) (''Terogkomst van de Hemelclan'')
+| ''SkyClan's Destiny'' (3 augustus 2010) || ''Terugkeer van de Hemelclan'' (12 oktober 2018) (''Terugkomst van de Hemelclan'')
 |-
 | ''Crookedstar's Promise'' (5 july 2011) ||''Kromsters Belofte'' (21 oktober 2020)
 |-
