*Empty MediaWiki Message*

--- a/Plattmakers.mw
+++ b/Plattmakers.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:Plattmakers Logo 2021.svg|thumb|Logo van Plattmakers.de]]
-[[Ofbeelding:Plattmakers Screenshot 2021.png|thumb|Veurbeeld van et woord ''[[Schroef|Schruuv]]'')]]
+[[Ofbeelding:Plattmakers Screenshot 2021.png|thumb|Veurbeeld van et woord ''Schruuv'' ([[schroef]])]]
 '''Plattmakers''' is een [[Nedersaksisch]] [[woordeboek]] op internet. Et woordeboek, dat al sund 2009 bestaot, had in [[febrewaori]] [[2014]] meer as 18.500 begrippen in de databaank. Een woord kan in verschillende variaanten van et Nedersaksisch invoerd wodden, et is daormee et briedvoerigste Nedersaksische woordeboek op internet.
 
 Et biezundere an Plattmakers is dat de woorden in een biezundere schriefwieze weergeven wodden, krek zoas in de ooldste spellingvorm van veur et [[Ooldsaksisch]] (omenbi'j et jaor [[700]]). Disse schriefwieze is now ommezet in een mederne spelling, waorin alle opienvolgende [[klaankverschoeving]]s, die d'r sund die tied west hebben, opneumen bin. Op disse menier wodt de mederne vorm van et woord saemensteld zonder dat d'r verschillen in schriefwieze ontstaon. Dislange is dit umzettingsperces beschikber veur zes verschillende dialekten. In totaol wodt et Nedersaksische taelgebied van de webstee in 128 dialektgebieden indield. In de toekomst zal et woordeboek et umzettingsperces in alle 128 dialekten ondersteunen. De webstee is beschikber in et Nedersaksisch, [[Duuts]], [[Nederlaans]] en [[Engels]] en bödt naost woordverklaorings in et Nedersaksisch ok vertaelings in et Duuts, Nederlaans en Engels an. In de toekomst zullen d'r ok nog aandere taelen bi'j kommen.
