*Empty MediaWiki Message*

--- a/Warrior_Cats.mw
+++ b/Warrior_Cats.mw
@@ -37,7 +37,7 @@ Hyronder kün y de üüt egeaven boken zeen en wanneer as ze vertålt bint nå e
 |-
 | ''Twilight'' (22 augustus 2006) ||''Schemering'' (17 july 2014) (''Skemering'')
 |-
-| ''Sunset'' (26 september 2006) ||''Zonsondergang'' (20 januari 2015) (S''ünsundergang'')
+| ''Sunset'' (26 september 2006) ||''Zonsondergang'' (20 januari 2015) (''Sünsundergang'')
 |}
 
 === Sery 3 'Power of Three / De Macht van Dree' ===
@@ -54,7 +54,7 @@ Hyronder kün y de üüt egeaven boken zeen en wanneer as ze vertålt bint nå e
 |-
 | ''Long Shadows'' (25 november 2008) ||''Lange schaduwen'' (20 februari 2017) (''Lange Skaduwe''n)
 |-
-| ''Sunrise'' (21 april 2009) ||''Zonsopgang'' (5 july 2017) (S''ünsupgang'')
+| ''Sunrise'' (21 april 2009) ||''Zonsopgang'' (5 july 2017) (''Sünsupgang'')
 |}
 
 === Sery 4 'Omen of the Stars / Teken van de Sterren' ===
