Verwysing nå döärverwyssyde repareerd ([[Europa]] nå [[Europa (werelddeel)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Winter_van_1683-1684.mw
+++ b/Winter_van_1683-1684.mw
@@ -2,7 +2,7 @@
 
 De '''winter van 1683-1684''' ([[Engels]]: ''Great Frost of 1683–84'') was ien van de koldste winters in de letste veerhonderd jaor. In [[Engelaand (regio)|Engelaand]], waor sinds 1658 emeten wördt (''[[Central England Temperature]]'') was disse winter de koldste sinds er emeten wördt. De winter was daor met −1,17 graoden Celsius gemiddeld aldberbärstends kold. [[December]] 1683 had daor een gemiddelde temperatuur van 0,5 graoden, [[januari]] −3,0 en [[februari]] −1,0. De winter van 1683-1684 is de koldste van de drie winters van de CET riege die een gemiddelde negatieve temperatuur hadden.<ref>MONTHLY MEAN CENTRAL ENGLAND TEMPERATURE (DEGREES C) 1659-1973 MANLEY (Q.J.R.METEOROL.SOC., 1974) 1974 ON PARKER ET AL. (INT.J.CLIM., 1992) PARKER AND HORTON (INT.J.CLIM., 2005)  [https://www.metoffice.gov.uk/hadobs/hadcet/cetml1659on.dat]</ref>
 
-Zo'n zes wekken veur de [[Kerstmis|kärstmis]], half [[november]], vrös et al. Nao een paor wekken van vörst bint dan alle grote [[rivier]]<nowiki/>en van [[Europa]] bevreuren. Op [[2 jannewaori|2 januari]] is de zee bi'j [[Vlaanderen]] twie [[mijl]] wied uut de kust bevreuren. In et begin van januari [[1684]] is de [[Theems]] bi'j [[London]] kats bevreuren. Op [[17 jannewaori|17 januari]] wördt er dan een ''[[Theems Frost Fair]]'' eholden.<ref>http://www.webhistoryofengland.com/?p=613</ref> Halverweage [[februari]] is et [[ies]] hier dan 11 [[inch]] dik.<ref>https://web.archive.org/web/20120113065141/http://www.netweather.tv/index.cgi?action=other%3Btype%3Dwinthist%3Bsess%3D</ref> De Theems hef in totaol veur 41 dagen bevreuren ewest. In [[Antwerpen]] is de [[Schelde]] ook kats bevreuren,<ref>http://www.avbg.be/kroniek_Antwerpen_1601-1700.html</ref> net zo as de [[Bodensee]]. De luu kunt oaver de Bodensee hen lopen. Sinds [[1573]] is et maar vief keer gebeurd det de Bodensee kats bevreuren was. Veur et letst in [[Winter van 1962-1963|1963]]. Op 29 januari 1684 bint in [[Brussel]] de winkels eslötten en wördt vermeldt det er luu van de kolde op de straote valt.<ref>http://www.pastpresented.info/frost1683.htm</ref> In [[Nederlaand]] vrös et zeuven wekken lange. Umdet er weinig [[snee]] is met rostig en helder weer wier et ies ärg dik. Op sommige plaatsen zölfs töt twie Rijnlandse voeten (63 centimeter).<ref>http://books.google.nl/books?id=C0lbAAAAQAAJ&pg=PR7&dq=winter+1684&hl=nl&ei=lavYTtnGF4qXOsGRicAO&sa=X&oi=book_result&ct=result&resnum=6&sqi=2&ved=0CE0Q6AEwBQ#v=onepage&q=winter%201684&f=false</ref>
+Zo'n zes wekken veur de [[Kerstmis|kärstmis]], half [[november]], vrös et al. Nao een paor wekken van vörst bint dan alle grote [[rivier]]<nowiki/>en van [[Europa (werelddeel)|Europa]] bevreuren. Op [[2 jannewaori|2 januari]] is de zee bi'j [[Vlaanderen]] twie [[mijl]] wied uut de kust bevreuren. In et begin van januari [[1684]] is de [[Theems]] bi'j [[London]] kats bevreuren. Op [[17 jannewaori|17 januari]] wördt er dan een ''[[Theems Frost Fair]]'' eholden.<ref>http://www.webhistoryofengland.com/?p=613</ref> Halverweage [[februari]] is et [[ies]] hier dan 11 [[inch]] dik.<ref>https://web.archive.org/web/20120113065141/http://www.netweather.tv/index.cgi?action=other%3Btype%3Dwinthist%3Bsess%3D</ref> De Theems hef in totaol veur 41 dagen bevreuren ewest. In [[Antwerpen]] is de [[Schelde]] ook kats bevreuren,<ref>http://www.avbg.be/kroniek_Antwerpen_1601-1700.html</ref> net zo as de [[Bodensee]]. De luu kunt oaver de Bodensee hen lopen. Sinds [[1573]] is et maar vief keer gebeurd det de Bodensee kats bevreuren was. Veur et letst in [[Winter van 1962-1963|1963]]. Op 29 januari 1684 bint in [[Brussel]] de winkels eslötten en wördt vermeldt det er luu van de kolde op de straote valt.<ref>http://www.pastpresented.info/frost1683.htm</ref> In [[Nederlaand]] vrös et zeuven wekken lange. Umdet er weinig [[snee]] is met rostig en helder weer wier et ies ärg dik. Op sommige plaatsen zölfs töt twie Rijnlandse voeten (63 centimeter).<ref>http://books.google.nl/books?id=C0lbAAAAQAAJ&pg=PR7&dq=winter+1684&hl=nl&ei=lavYTtnGF4qXOsGRicAO&sa=X&oi=book_result&ct=result&resnum=6&sqi=2&ved=0CE0Q6AEwBQ#v=onepage&q=winter%201684&f=false</ref>
 
 Zo half februari is et dan klaor met et winterse weer umdet et giet [[Dooi|dooien]]. Et effect op de maotschappi'je was groot en op völle plekken was er niet genog etten. Een [[hongersnood]] zo as in [[Winter van 1708-1709|1709]] is niet gebeurd.
 
