[[:Kategorie:17e eeuw]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Winter_van_1683-1684.mw
+++ b/Winter_van_1683-1684.mw
@@ -13,3 +13,5 @@ Zo half februari is et dan klaor met et winterse weer umdet et giet [[Dooi|dooie
 
 {{Dialekt|sdz}}
 {{Kolde winters Nederlaand}}
+
+[[Kategorie:17e eeuw]]
