[[:Kategorie:Spel]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Hearts_of_Iron_IV.mw
+++ b/Hearts_of_Iron_IV.mw
@@ -20,3 +20,5 @@ Veur et spöl bint er verschillende [[DLC|DLC's]] te kriegen. Hieronder staot ee
 * [https://hoi4.paradoxwikis.com/Hearts_of_Iron_4_Wiki Wiki van Hearts of Iron IV]
 
 {{Dialekt|sdz}}
+
+[[Kategorie:Spel]]
