+[[Kategorie:Frankriek]]; +[[Kategorie:Generaol]] ([[Wikipedia:HotCat|HotCat.js]])

--- a/Auguste_de_Marmont.mw
+++ b/Auguste_de_Marmont.mw
@@ -19,3 +19,7 @@ In zien letste jaoren hield hi'j zich ganks met schrieven. Zien waarken bint bel
 <references/>
 
 {{Dialekt|sdz}}
+
+{{DEFAULTSORT:Marmont}}
+[[Kategorie:Frankriek]]
+[[Kategorie:Generaol]]
