*Empty MediaWiki Message*

--- a/Hellmanngetal.mw
+++ b/Hellmanngetal.mw
@@ -3,10 +3,10 @@ Et '''Hellmanngetal''', ook wel '''koldegetal''' ([[Nederlaands]]: '''''koudeget
 ==Bepaoling en naodielen==
 Et Hellmanngetal wördt berekkend deur de dagen met een gemiddelde temperetuur leger dan et vröspunt bie mekare op te tellen. An et ende wördt et minteken vot elaoten. Zo geaft twie dagen met een gemiddelde temperetuur van −1,2°C en −0,3°C een Hellmanngetal van 1,5. Een naodiel van disse meniere is det een winter met völle nachtvörst met oaverdag tempereturen ruum baoven de nul graoden niet vlug een heug(er) Hellmanngetal hef. An de aandere kaante kan een warme winter met een paor iesdagen al rap een heuger Hellmanngetal kriegen. Een veurbield is de winter van 2011-2012.
 
-'''Classificaotie in Nederlaand:'''
+'''Benaming in Nederlaand:'''
 
 {| class="wikitable"
-! Koldegetal Hellmann (H) || Classificaotie<ref>https://www.knmi.nl/nederland-nu/klimatologie/lijsten/hellmannM/</ref>
+! Koldegetal Hellmann (H) || Benaming<ref>https://www.knmi.nl/nederland-nu/klimatologie/lijsten/hellmannM/</ref>
 |-
 |H > 300 || Streng
 |-
@@ -14,7 +14,7 @@ Et Hellmanngetal wördt berekkend deur de dagen met een gemiddelde temperetuur l
 |-
 |H > 100 || Kold
 |-
-|H < 100 || Normaol
+|H < 100 || Normaal
 |-
 |H < 40 || Zachte
 |-
@@ -22,10 +22,10 @@ Et Hellmanngetal wördt berekkend deur de dagen met een gemiddelde temperetuur l
 |-
 |H < 10 || Buutengewoon zachte
 |}
-'''Classificaotie in Duutslaand:'''
+'''Benaming in Duutslaand:'''
 {| class="wikitable"
 !Koudegetal Hellmann (H)
-!Classificatie
+!Benaming
 |-
 |H > 400
 |Zeer streng
@@ -37,7 +37,7 @@ Et Hellmanngetal wördt berekkend deur de dagen met een gemiddelde temperetuur l
 |Maotig streng
 |-
 |H > 100
-|Normaol
+|Normaal
 |-
 |H < 100
 |Zeer zachte
@@ -53,7 +53,7 @@ De winter van 2013-2014 was de eerste winter sinds minstens 1901 die nul punten 
 |-
 |
 {| class="wikitable sortable"
-!Rang || Jaor || Helmanngetal
+!Rang || Jaor || Hellmanngetal
 |-
 | 1. || 1947 || 348,3
 |-
@@ -77,7 +77,7 @@ De winter van 2013-2014 was de eerste winter sinds minstens 1901 die nul punten 
 |}
 |
 {| class="wikitable sortable"
-!Rang || Jaor || Helmanngetal
+!Rang || Jaor || Hellmanngetal
 |-
 | 1. || 2014 || 0,0
 |-
