*Empty MediaWiki Message*

--- a/Hellmanngetal.mw
+++ b/Hellmanngetal.mw
@@ -1,7 +1,7 @@
-Et '''Hellmanngetal''', ook wel '''koldegetal''' ([[Nederlaands]]: '''''koudegetal'''''), is een meniere um de totaole hoevölheid kolde te meten van de hiele winter. Et Hellmanngetal (H) wördt emeten van 1 november töt 31 meert. Et is vernuumd nao de [[Duutslaand|Duutse]] [[meteorologie|meteoroloog]] [[Gustav Hellmann]]. Een andere meniere um de strengheid van een winter te meten is et [[Vörstgetal van IJnsen|vörstgetal]] (van IJnsen). Veur de zommer bestiet er een soortgeliek iets, nämelik et [[warmtegetal]]. 
+Et '''Hellmanngetal''', ook wel '''koldegetal''' ([[Nederlaands]]: '''''koudegetal'''''), is een meniere um de totaole hoevölheid kolde te meten van de hiele [[winter]]. Et Hellmanngetal (H) wördt emeten van 1 november töt 31 meert. Et is vernuumd nao de [[Duutslaand|Duutse]] [[meteorologie|meteoroloog]] [[Gustav Hellmann]]. Veur de zommer bestiet er een soortgeliek iets, nämelik et [[warmtegetal]]. 
 
 ==Bepaoling en naodielen==
-Et Hellmanngetal wördt berekkend deur de dagen met een gemiddelde temperetuur leger dan et vröspunt bie mekare op te tellen. An et ende wördt et minteken vot elaoten. Zo geaft twie dagen met een gemiddelde temperetuur van −1,2°C en −0,3°C een Hellmanngetal van 1,5. Een naodiel van disse meniere is det een winter met völle nachtvörst met oaverdag tempereturen ruum baoven de nul graoden niet vlug een heug(er) Hellmanngetal hef. An de aandere kaante kan een warme winter met een paor iesdagen al rap een heuger Hellmanngetal kriegen. Een veurbield is de winter van 2011-2012.
+Et Hellmanngetal wördt berekkend deur de dagen met een gemiddelde temperetuur leger dan et vröspunt bie mekare op te tellen. An et ende wördt et minteken vot elaoten. Zo geaft twie dagen met een gemiddelde temperetuur van −1,2°C en −0,3°C een Hellmanngetal van 1,5. Een naodiel van disse meniere is det een winter met völle nachtvörst met oaverdag tempereturen ruum baoven de nul graoden niet vlug een heug(er) Hellmanngetal hef. An de aandere kaante kan een warme winter met een paor [[Iesdag|iesdagen]] al rap een heuger Hellmanngetal kriegen. Een veurbield is de winter van 2011-2012, disse winter had een Hellmanngetal van 88,4, de [[winter van 2014-2015]] had een Hellmanngetal van 7,8. Beide winters waren met 4,1 graoden gemiddeld<ref>Gemiddelde oaver 1981-2010</ref> (ärg) zachte. Een aandere meniere um de hoevölheid kolde te meten is met et [[vörstgetal van IJnsen]]. Disse meniere gebruukt de hoevölheid [[Vörst (weer)|vörstdagen]], [[Iesdag|iesdagen]] en zeer kolde dagen (minimumtemperetuur 10,0 of leger<ref>Dit is dus niet etzöldfde as [[strenge vörst]] umdet strenge vörst vanaf -10,1 is.</ref>) um de winter te beoordielen.
 
 '''Benaming in Nederlaand:'''
 
