Verwysing nå döärverwyssyde repareerd ([[Gemeente]] nå [[gemiente (bestuur)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Kampervene.mw
+++ b/Kampervene.mw
@@ -1,5 +1,5 @@
 [[Bestaand:Kamperveen.gif|thumb|250px|Kamperveen]]
-'''Kampervene''' is n polder en veurmaolige [[gemeente]] in t zuden van de stad [[Kampen (Overiessel)|Kampen]] in de [[Nederlaand]]se provinsie [[Oaveriessel|Overiessel]]. t Be-eurt sinds 2002 tot de gemeente Kampen, toen de gemeenten [[Iesselmuden]] en Kampen samen-egaon bin. Tot 1937 was t n zelfstaandige gemeente. t Is ook de name van n klei-op-veengebied dät vanof ongeveer [[1200]] nao Christus ontgonnen is.
+'''Kampervene''' is n polder en veurmaolige [[gemiente (bestuur)|gemeente]] in t zuden van de stad [[Kampen (Overiessel)|Kampen]] in de [[Nederlaand]]se provinsie [[Oaveriessel|Overiessel]]. t Be-eurt sinds 2002 tot de gemeente Kampen, toen de gemeenten [[Iesselmuden]] en Kampen samen-egaon bin. Tot 1937 was t n zelfstaandige gemeente. t Is ook de name van n klei-op-veengebied dät vanof ongeveer [[1200]] nao Christus ontgonnen is.
 
 Kamperveen ef drie buurtskappen: [[De Zaande]], [[Zuudeinde]] en [[Ogeweg]]. Disse buurtskappen ebben alle drie n eigen identiteit binnen de streek. Zuudeinde leunt meer op t kortbi'j elegen [[Oosterwolde (Gelderlaond)|Oosterwolde]] terwiel De Zaande altied al ekenmärkt wördt deur zien ligging an de [[Ank]], n ziedtakke van de rivier de [[Iessel]]. De Ogeweg ef, net as Zuudeinde, n kärke en n skole en ligt midden in de streek. Verspreid tussen disse drie kernen liggen veule boerenbedrieven die veural biesten olden.
 
