--- a/Basse.mw
+++ b/Basse.mw
@@ -1,7 +1,7 @@
 '''Basse''' kan noar verskeaidene dinge verwiezen:
 
-*[[Basse (Steenwiekerlaand)]] - Ne boerskop in de [[Oaveriessel]]se [[gemeente]] [[Steenwiekerlaand]]
-*[[Basse (lief)]] - n ([[Riessens]]) [[Tweants]]en naam vuur t böawnste deel van t meanselike [[been]]
+*[[Basse (Steenwiekerlaand)]] - Ne boerskop in de Oaveriesselse gemeente Steenwiekerlaand
+*[[Basse (lief)]] - n (Riessens) Tweantsen naam vuur t böawnste deel van t meanselike [[been]]
 *[[Basgitaar]], [[Sousafoon]], [[Skoolderbas]] en aandere muziekinstrumeantn met n zwöarsten toon van t ensemble.
 
 {{dv}}
