--- a/Lettele.mw
+++ b/Lettele.mw
@@ -19,7 +19,7 @@
 | region = NL-OV
 }}
 [[Ofbeelding:Map - NL - Deventer - Wijk 09 Diepenveen - Buurt 06 Lettele.svg|thumb|right|200px|Lettele in de gemeente Deawenter]]
-'''Lettele''' is een doarp in de [[Sallaand]]se [[gemeente]] [[Deawenter]] in [[Nederlaand]]. In [[2012]] har et 595 inwonners. Den naam is ne verseempelde oetsproake van ''Luttel-loo'', ne kleane lösse stea in et woold.
+'''Lettele''' is een doarp in de [[Sallaand]]se [[gemiente (bestuur)|gemeente]] [[Deawenter]] in [[Nederlaand]]. In [[2012]] har et 595 inwonners. Den naam is ne verseempelde oetsproake van ''Luttel-loo'', ne kleane lösse stea in et woold.
 
 Lettele lig tusken de doarpen [[Okkenbrook]] en [[Skalkhoar]] an den Oerdiek en Battemseweg. Oonder et doarpsgebeed vaalt ok de [[boerskop]]pen [[Linde (Deawenter)|Linde]], [[Zaandbeelt]] en [[Olde Mölle]], woer as de korenmölle De Leeuw oet [[1856]] steet. Töt an de gemeentelike herverdeling van [[1999]] was Lettele een doarp in de gemeente [[Depenvenne]].
 
