Verwysing nå döärverwyssyde repareerd ([[Gemeente]] nå [[gemiente (bestuur)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Middelburg_(gemeente).mw
+++ b/Middelburg_(gemeente).mw
@@ -1,5 +1,5 @@
 [[Bestaand:Map_-_NL_-_Municipality_code_0687_(2009).svg|thumb|Gemeente Middelburg op de kaarte van Zeelaand]]
-'''Middelburg''' is ne [[gemeente]] op et [[skiereilaand]] [[Walcheren]] in de [[Nederlaand]]se [[proveensie]] [[Zeelaand]]. Op 1 jannewoari 2020 har et 48.810 inwonners. Et is doarmet de kleanste proveensieheuwdstad van Nederlaand. Et greanzet in et westen an de gemeente [[Veere (gemeente)|Veere]], in et oosten an [[Goes]] en in et zuden an [[Vlissingen]].
+'''Middelburg''' is ne [[gemiente (bestuur)|gemeente]] op et [[skiereilaand]] [[Walcheren]] in de [[Nederlaand]]se [[proveensie]] [[Zeelaand]]. Op 1 jannewoari 2020 har et 48.810 inwonners. Et is doarmet de kleanste proveensieheuwdstad van Nederlaand. Et greanzet in et westen an de gemeente [[Veere (gemeente)|Veere]], in et oosten an [[Goes]] en in et zuden an [[Vlissingen]].
 
 Binnen de gemeente Middelburg ligt de stad [[Middelburg (stad)|Middelburg]] en de döarpkes [[Arnemuden]] (5368 leu), [[Sunt Laurens]] (1621 leu) en [[Niej- en Sunt Joostlaand]] (1325 leu).
 
