Verwysing nå döärverwyssyde repareerd ([[Gemeente]] nå [[gemiente (bestuur)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Skouwen-Doewenlaand.mw
+++ b/Skouwen-Doewenlaand.mw
@@ -16,9 +16,9 @@ lengtegroad = 3/53/0/E |
 verkeersoader = [[N57]], [[N59]], [[N256]] |
 netnummer = 0111 |
 postkode = 4300-4329 |
-webstie = [http://www.schouwen-duiveland.nl www.schouwen-duiveland.nl] |
+webstie = [http://www.schouwen-duiveland.nl www.schouwen-duiveland.nl]
 }}
-'''Skouwen-Doewenlaand''' ([[Nederlaands]]: ''Schouwen-Duiveland'', [[Zeeuws]]: ''Schouwen-Duveland'') is een [[eilaand]] en [[gemeente]] in de [[Nederlaand]]se [[proveensie]] [[Zeelaand]]. Der wont 33.858 inwoners ([[1 jannewoari]] [[2020]]) op ne vlakte van 488,21 km² (met 258,14 km² water).
+'''Skouwen-Doewenlaand''' ([[Nederlaands]]: ''Schouwen-Duiveland'', [[Zeeuws]]: ''Schouwen-Duveland'') is een [[eilaand]] en [[gemiente (bestuur)|gemeente]] in de [[Nederlaand]]se [[proveensie]] [[Zeelaand]]. Der wont 33.858 inwoners ([[1 jannewoari]] [[2020]]) op ne vlakte van 488,21 km² (met 258,14 km² water).
 
 Oawer den [[Brouwersdam]] en den [[Grewelingendam]] kom iej op [[Goeree-Overflakkee]]. Oawer de [[Oosterskeldekering]] en de [[Zeelaandbrugge]] kom iej in [[Noord-Bevelaand|Noord-Bewelaand]]. Der is hoaste gin heugteverskil en völle delen lignt oonder zeeheugte. Op de westelike peunte is ne [[doene]]nriege, woervan as de heugste doene 42 meter boawen de zee oetstek. Der komt vuural den zommerdag völle ([[Duutslaand|Duutse]] [[toerisme|toeristen]]. In de plaatse [[Renesse]] komt jonge möage op de verskillende jeugndcampings gearne vakaansie hoolden.
 
