--- a/Hardinxveld-Giessendam.mw
+++ b/Hardinxveld-Giessendam.mw
@@ -16,9 +16,11 @@ lengtegroad = 4/50/0/E |
 verkeersoader = [[A15]] |
 netnummer = 0184|
 postkode = 3371 - 3373 |
-webstie = [http://www.hardinxveld-giessendam.nl www.hardinxveld-giessendam.nl] |
+webstie = [http://www.hardinxveld-giessendam.nl www.hardinxveld-giessendam.nl]
 }}
-'''Hardinxveld-Giessendam''' is ne [[gemeente]] in de [[Nederlaand]]se [[proveensie]] [[Zuud-Hollaand]]. Der wont 17.751 leu op ne vlakte van 19,35 km² (met 2,46 km² water). In de gemeente ligt et doarp [[Boven-Hardinxveld]] en et dubbeldoarp [[Giessendam - Neder-Hardinxveld]].
-{{Zuud-Hollaand}} 
+'''Hardinxveld-Giessendam''' is ne [[gemiente (bestuur)|gemeente]] in de [[Nederlaand]]se [[proveensie]] [[Zuud-Hollaand]]. Der wont 17.751 leu op ne vlakte van 19,35 km² (met 2,46 km² water). In de gemeente ligt et doarp [[Boven-Hardinxveld]] en et dubbeldoarp [[Giessendam - Neder-Hardinxveld]].
+
+{{Zuud-Hollaand}}
+
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Gemeente in Zuud-Hollaand]]
