Verwysing nå döärverwyssyde repareerd ([[Gemeente]] nå [[gemiente (bestuur)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Katwiek.mw
+++ b/Katwiek.mw
@@ -16,10 +16,10 @@ lengtegroad = 4/24/0/E |
 verkeersoader = [[A44]], [[N206]] |
 netnummer = 071 |
 postkode = 2220-2239 |
-webstie = [http://www.katwijk.nl www.katwijk.nl] |
+webstie = [http://www.katwijk.nl/ www.katwijk.nl] |
 }}
 
-'''Katwiek''' is ne [[gemeente]] in de [[Nederlaand]]se [[proveensie]] [[Zuud-Hollaand]]. Der wont 63.007 leu op ne vlakte van 31,13 km². Doarvan is 6,59 km² water. 
+'''Katwiek''' is ne [[gemiente (bestuur)|gemeente]] in de [[Nederlaand]]se [[proveensie]] [[Zuud-Hollaand]]. Der wont 63.007 leu op ne vlakte van 31,13 km². Doarvan is 6,59 km² water. 
 
 Et hudige Katwiek besteund vroger oet meardere doarpen. Et [[viskerieje|viskersdoarp]] [[Katwiek an Zee]] en et boerenedoarp [[Katwiek an den Rijn]] zeent heanig an mekoar egröaid en töt ene plaatse smeulten.
 
@@ -41,7 +41,6 @@ In de gemeente ligt vief kernen, met et volgende antal inwonners:
 | ''Boetengebeed van Katwiek'' ||align="right"| 550
 |-
 | Totaal gemeente Katwiek ||align="right"| 62.475
-|-
 |}
 
 {{Zuud-Hollaand}}
