--- a/Krimpen_an_den_Iessel.mw
+++ b/Krimpen_an_den_Iessel.mw
@@ -16,11 +16,13 @@ lengtegroad = 4/36/0/E |
 verkeersoader = [[N210]] |
 netnummer = 0180|
 postkode = 2921-2926 |
-webstie = [http://www.krimpenaandenijssel.nl www.krimpenaandenijssel.nl] |
+webstie = [http://www.krimpenaandenijssel.nl www.krimpenaandenijssel.nl]
 }}
-'''Krimpen an den Iessel''' ([[Nederlaands]]: ''Krimpen aan den IJssel'') is ne plaatse en [[gemeente]] in de [[Nederlaand]]se [[proveensie]] [[Zuud-Hollaand]]. Der wonden op [[1 mei]] [[2014]] 28.870 leu op ne vlakte van 8,93 km² (met 1,10 km² water). Der lignt binnen Kreempen an den Iessel ginne aandere plaatsen. 
+'''Krimpen an den Iessel''' ([[Nederlaands]]: ''Krimpen aan den IJssel'') is ne plaatse en [[gemiente (bestuur)|gemeente]] in de [[Nederlaand]]se [[proveensie]] [[Zuud-Hollaand]]. Der wonden op [[1 mei]] [[2014]] 28.870 leu op ne vlakte van 8,93 km² (met 1,10 km² water). Der lignt binnen Kreempen an den Iessel ginne aandere plaatsen. 
 
 Um Krimpen an den Iessel lignt dree natuurgebeden: et [[Loetbos]], [[Kreempenerhoolt]] (met zwemviever) en et [[Stormpooldervloodbos]].
+
 {{Zuud-Hollaand}}
+
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Gemeente in Zuud-Hollaand]]
