--- a/Gèvel.mw
+++ b/Gèvel.mw
@@ -1,3 +1,4 @@
+[[File:Gables.jpg|thumb|Gèvels]]
 Een '''gèvel''' is een gedielte van een gebouw dät van de butenof te zien is. 't Is meestentieds emaakt van [[keie|stien]], [[glas]] of [[holt|olt]] en soms ok van [[metaal]]. An de gèvel van een gebouw ku-j zien in welke tied 't ebouwd is. 't Ontwärp van de gèvel is dan ok iel belangriek veur de [[architektuur|architectuur]].
 
 In [[Nederlaand]] wordt de gèvel van een [[huus|uus]] meestentieds emetsteld mit [[keie|stienen]], die mit menäre verbunnen wonnen deur een [[mortel]]. De [[voege]]n tussen de stienen wonnen evuld mit voegspecie, een soort mortel an-emaakt mit zo min meugelijk [[woater|wäter]]. Eers as de voegen dichtemaakt bint is de gèvel wäterdich. [[Amsterdam]] stiet naost zien [[grachte]]n bekend um zien grote oeveuleid an olde gèvels.
