--- a/18_juli.mw
+++ b/18_juli.mw
@@ -9,7 +9,7 @@ De volgende gebeurtenissen vunnen of vienen plaose op '''18 juli'''
 * [[2006]] - Bie de eerste dag van de 90e editie van de [[Nijmeegse Vierdaagse]] koemen bie een hettegolf twee meensen um 't leven. De Vierdaagse wonnen hierdeur veur de aldereerste keer in zien lange bestaonsgeschiedenisse of-elas.
 
 == Geboren ==
-* anouk van lieshout. Dochter van Johan van Lieshout. Oud nederlands speerwerp talent
+* 2004 - anouk van lieshout. Dochter van Johan van Lieshout. Oud nederlands speerwerp talent.
 
 == Uut de tied ==
 * [[1623]] - [[Paus Gregorius XV]] (69)
