--- a/Scheuvellopen.mw
+++ b/Scheuvellopen.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Martina Sablikova 2007.jpg|right|thumb|250px|Wedstriedscheuveln: [[Martina Sáblíková]] op een kuunstiesbane]]
+[[Ofbeelding:Martina Sablikova 2007.jpg|thumb|250px|Wedstriedscheuveln: [[Martina Sáblíková]] op een kuunstiesbane]]
 [[Ofbeelding:IMG-20210213-WA0003.jpg|thumb|250px|Scheuveln op [[de Dobbe]] in de [[Aa-laanden]] in [[Zwolle]]]]
 '''Scheuvellopen''' of '''scheuveln''' is oe voortbewegen aover een [[ies|iesoppervlakte]] op dunne, rechte iezers ([[scheuvel|scheuvels]]). Scheuvellopen kuj doen um verscheiden redenen, zoas dieverdaotsie, sport, lichemsbeweging of reizen. 't Wördt zowal op netuuries as op kuunsties edaone. Zo rap as 't ies betrouwber is en de weersumstaandigheden 't toelaot, wördt der deur iesclubs toertochten organiseerd. As wedstriedsport kent 't scheuvellopen meerdere disciplines.
 
@@ -14,7 +14,7 @@ Scheuvellopen op de mederne meniere ontstund mit de ingebruukname van een stalen
 In Nederlaand deuden alle bevolkingsklassen an scheuvellopen, zoas blek uut schilderijen van de Olde Meisters. Scheuvellopen deuden ze ok in China tiedens de [[Song-dynastie]], en de heersers van de [[Qing-dynastie]] waren der drok op.
 
 == Nedersaksisch ==
-''De variaanten mit 't element 'scheuvel' bint traditioneel Nedersaksisch. Vandage de dag gebruukt veul sprekers 't Nederlaandse 'schaatsen', al dan niet fonetisch anepast.
+''De variaanten mit 't element 'scheuvel' bint traditioneel Nedersaksisch. Vandage de dag gebruukt veul sprekers 't Nederlaandse 'schaatsen', al dan niet fonetisch anepast.''
 
 * [[Drèents]]:
 ** ''schaatsen'', ''schaatsenrieden''
