*Empty MediaWiki Message*

--- a/Grunnegs.mw
+++ b/Grunnegs.mw
@@ -199,7 +199,7 @@ Veur de geschiednis van t Grunnegs mouten wie omgoan noar de [[Middelaiwen]], n 
 Noast dat der twij transchriften van de roenen binnen, kinnen geleerden t ook nait ais worden over de betaikenis van t stok. Ien noudoags Grunnegs zollen de vertoalens wezen: 
 
 :"''Ien Ophaim/Oppum(?) nam Amluth stried op. Veur zien aivenholtje is branden votdoken. Veur dit aivenholtje zel de branden votdoeken.''" 
-:Of "''Op t haim (boeren stee) blift hail en zegen; loat t gruien bie aivenboom op wierde; Wimout het dizzent (ien aigendom)". 
+:Of "''Op t haim (boeren stee) blift hail en zegen; loat t gruien bie aivenboom op wierde; Wimout het dizzent (ien aigendom)''". 
 
 n Aander belaangriek Oldfrais dokumìnt is de [[Buurbraif]] oet 1327 dou [[n Daam]] stadsrechten kreeg oet de vergoadern van de [[Opstalboom]] bie [[Aauwerk (stad)|Auwerk]].
 
