*Empty MediaWiki Message*

--- a/Raai.mw
+++ b/Raai.mw
@@ -1,4 +1,4 @@
-[[Bestaand:Rogge aar Secale cereale.jpg|right|250px|thumb|Raaikoren]]
+[[Bestaand:Rogge aar Secale cereale.jpg|250px|thumb|Raaikoren]]
 [[Bestaand:Secale cereale flour.jpg|250px|thumb|Door [[korenmolen]] gemalen rogge]]
 [[File:Secale cereale MHNT.BOT.2015.2.40.jpg|thumb|''Secale cereale'']]
 
@@ -12,32 +12,31 @@ t Ien Nedderlaand verbaauwde arioal mit winterraai was tuzzen 1998 en 2007:
 
 {| {{prettytable}}
 ! joar || arioal (bunder)
-|-----
+|-
 | 1998: ||  6300
-|-----
+|-
 | 1999:
 | 2600
-|-----
+|-
 | 2000:
 | 5800
-|-----
+|-
 | 2001:
 | 3500
-|-----
+|-
 | 2002: || 3500
-|-----
+|-
 | 2003: ||  3500
-|-----
+|-
 | 2004: ||  3400
-|-----
+|-
 | 2005: ||  2500
-|-----
+|-
 | 2006: ||  2400
-|-----
+|-
 | 2007: ||  2400
-|-----
+|-
 |}
-</table>
 
 == Leegsaksisch ==
 * [[Grönnegs]]:
