*Empty MediaWiki Message*

--- a/Warrior_Cats.mw
+++ b/Warrior_Cats.mw
@@ -1,6 +1,6 @@
 '''Warrior Cats''' ([[Engelsk]]: ''Warriors'') is en [[Engels|engelsk]]<nowiki/>talige [[Fantasy (genre)|fantasy]] bokensery oaver de geböärtenissen van en bende (verwilderde) [[Kat|katten]] dee in clans leaven. De sery is epübliceerd döär [[HarperCollins]]. Van de heyle sery bint meyr as 40 miljoon boken verkocht<ref>https://kidscreen.com/2019/01/07/coolabi-group-unveils-online-warriors-hub/</ref> en de boken stünden ereageld in de best sellers lyste van [[New York Times]]. De sery is eskreaven döär et [[Pseudoniem|psödonym]] [[Erin Hunter]]. De autöörs dee hyr by höört bint [[Kate Cary]], [[Cherith Baldry]] en [[Tui T. Sutherland]]. [[Victoria Holmes]] hef et verhål bedacht.
 
-De sery is in en bülte van verskillende talen vertålt, maar neet in et [[Neadersassisk|nedersassisk]]. In [[2016]] hef [[Alibaba Pictures]] de rechten ekocht vöär et maken van en film van de serys.
+De sery is in en bülte verskillende talen ümmeset, maar neet in et [[Neadersassisk|nedersassisk]]. In [[2016]] hef [[Alibaba Pictures]] de rechten ekocht vöär et maken van en film van de serys.
 
 Er bint söven serys dee elk zes boken hebt of gåt hebben. Er bint därtyn Super Editys, en dår kümp er nog eyne by. Dårnåst bint er ouk nog söven Field Guides, därtyn [[Manga|Mangas,]] eyn Graphic Novel, 22 Warriors Novellas en neygen körte verhålen. Et eyrste book, ''Into the Wild'', kwamp in [[2003]] üüt. 
 
