--- a/Dordrecht.mw
+++ b/Dordrecht.mw
@@ -27,6 +27,8 @@ Vanof 1 juli 1970 umvat de gemeente Dordrecht et totale [[Eilaand van Dordrecht]
 * [[Willemsdarp]] (gehucht)
 * [[Kop van 't Laand]] (noaberschap)
 
+'t Oale dorp [[Dubbeldam]], tot [[1970]] 'n eigen gemeente, is vandaag d'n dag geels as wiek in de bebouwing opegnommen.
+
 == Bezeensweerdeg ==
 
 Belangrieke bezeensweerdigheden in Dordrecht bunt in de eerste plaats den rivierkaai bi-j de [[Grootheufdspoorte]], wieter de [[Grote of Onze-Leve-Vrouwekarke (Dordrecht)|Grote Karke]] met euren markante, nooit af-ebouwden toorn en - ongebrukelek in Holland - eure steen oaverwelving. Ok de [[binnenhaven]]s en [[stadsgrachte|grachten]], woarvan er éne wödt oaverkluusd deur et stadhoes en et Scheffersplein, bunt bezeensweerdig. Langs de grachte en olde haavns stoat indrökwekkende koopleuhuze. Et Höf is n old Augustiener klooster met ne interessante geskiednis. In Et [[Höf (Dordrecht)|Höf]] vond bi-jveurbeeld in 1572 de [[Eerste Vri-je Stoatenvergoadering]] plaatse.
