--- a/Dörd.mw
+++ b/Dörd.mw
@@ -1,3 +1,3 @@
 {{dv}}
-* 't Dörp [[Nij-Dörd]] in [[Drenthe]];
+* 't Dörp [[Nei-Dörd]] in [[Drenthe]];
 * De stad [[Dordrecht]], waor dat Nij-Dörd naor vernömd is
