--- a/Dörd.mw
+++ b/Dörd.mw
@@ -1,3 +1,4 @@
-{{dv}}
-* 't Dörp [[Nei-Dörd]] in [[Drenthe]];
+'''Dörd''' kan verwiezen naor:
+* 't Dörp [[Nei-Dörd]] in Drenthe;
 * De stad [[Dordrecht]], waor dat Nij-Dörd naor vernömd is
+{{dv}}
