/* Drenthe */ Twee derbij

--- a/Apologisch_spreekwoord.mw
+++ b/Apologisch_spreekwoord.mw
@@ -84,6 +84,7 @@ Een plaetsnaeme wil niet zeggen dat et betreffende apologische spreekwoord daor 
 *"Da's der iene zunder een stien," zee de proemendief en toen hadde hij een slakke in het lief.
 *"Dat zal ankniepen," zee de boer en hij spande de hond veur de heuiwagen. ''([[Runerwold]])''
 *"De eerde trekt mij an," zee de kerel en hie leut zuch op de knieën vallen. ''([[Balloo]])''
+*De klaante zèe tègen de scheerbaos, toe as die een vinnegien ofschèur: "Ie wolden zeker kaant wark." ''([[Runerwold]])''
 *"De kosten gaot boven het gewin," zee de deeif, hie mus tweeidoezend gulden boout betaolen. ''([[Iekst]])''
 *De kwartel zee: "Ik vreet mij dik." ''([[Slien]])''
 *De rogge zee: "Gooi mij der mor op, ik zal der wal underkrupen." ''([[Slien]])''
@@ -114,6 +115,7 @@ Een plaetsnaeme wil niet zeggen dat et betreffende apologische spreekwoord daor 
 *"Hij is zo lui as een scheper die iene de weg zul wiezen en toen wees hij mit zien bien." ''([[ZWZ]])''
 *"IJ kunt niet ieuwig bij mekaar blieven," zee de knecht die drie dagen bij 'n boer west was en toen weer weggung. ''([[Hesseln]])''
 *"IJ moet de tied aaid nuttig besteden," zee de boer dou hij hen het hoesie mus; hie nam de kraant en een plak stoet met. ''([[Iekst]])''
+*"Ik bin uutekakt," zèe het olde meinse, en höld de knippe onderstebaoven. ''([[Runerwold]])''
 *"Ik heb een hiele hoge positie," zee de torenbouwer. ''([[Nei Amsterdam]])''
 *"*Ik vertrouw het weer niet," zee het joggie tegen zien mo en hie meuk veur de derde maol zien brook vol. ''([[Dwingel]])''
 *"Ik wil gien vrijer hebben, die gien mattien veur de deure hef," zee Jantien. ''([[Rune]])''
